--- a/app/src/main/res/layout/activity_drinks.xml
+++ b/app/src/main/res/layout/activity_drinks.xml
@@ -5,13 +5,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.bawebdevelopment.drinkmixr.CategoryView">
+    android:padding="12dp"
+    tools:context="com.bawebdevelopment.drinkmixr.CategoryViewActivity">
 
     <Button
         android:id="@+id/btn_add_new"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
         android:onClick="onClick"
         android:text="@string/btn_new" />
 
