--- a/app/src/main/res/layout/item_drink.xml
+++ b/app/src/main/res/layout/item_drink.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:padding="12dp"
@@ -9,9 +9,6 @@
         android:id="@+id/drinkName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:ellipsize="marquee"
-        android:maxLines="1"
         android:textSize="24sp" />
 
-</RelativeLayout>
+</LinearLayout>
