--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,9 +6,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="12dp"
     tools:context="com.bawebdevelopment.drinkmixr.MainActivity">
-    
+
+    <include layout="@layout/toolbar"/>
+
     <TextView
         android:id="@+id/category_label"
         android:layout_width="wrap_content"
@@ -16,7 +17,8 @@
         android:text="@string/category_label"
         android:layout_marginBottom="19dp"
         android:layout_above="@+id/spinner"
-        android:layout_alignParentStart="true"/>
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"/>
 
     <Spinner
         android:id="@+id/spinner"
@@ -45,6 +47,7 @@
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/drinks"
         android:layout_alignBottom="@+id/category_label"
-        android:layout_alignParentEnd="true"/>
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"/>
 
 </RelativeLayout>
