--- a/app/src/main/res/layout/item_drink.xml
+++ b/app/src/main/res/layout/item_drink.xml
@@ -9,6 +9,8 @@
         android:id="@+id/drinkName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="#ff0000"
+        android:padding="10dp"
         android:textSize="24sp" />
 
 </LinearLayout>
