--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -3,9 +3,9 @@
     <style name="AppTheme" parent="AppTheme.Base">
         <!-- Main theme colors -->
         <!--   your app branding color for the app bar -->
-        <item name="colorPrimary">#455A64</item>
+        <item name="colorPrimary">#607D8B</item>
         <!--   darker variant for the status bar and contextual app bars -->
-        <item name="colorPrimaryDark">#607D8B</item>
+        <item name="colorPrimaryDark">#455A64</item>
         <!--   theme UI controls like checkboxes and text fields -->
         <item name="colorAccent">#9e9e9e</item>
 
